# mini-databricks

./: .air.toml  .gitignore  Makefile  Readme.md  go.mod  go.sum  sqlc.yaml
.github/workflows/: ci.yaml
deployments/docker/: Dockerfile.api  Dockerfile.migrate  Dockerfile.scheduler  Dockerfile.worker  docker-compose.yml  prometheus.yml
deployments/k8s/: infrastructure.yaml  ingress.yaml  migrate.yaml  secrets.yaml  services.yaml
docs/: api.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  jobs.ts
frontend/src/components/: JobStatusBadge.tsx
frontend/src/pages/: JobDetailPage.tsx  JobsPage.tsx  LoginPage.tsx
internal/circuitbreaker/: circuitbreaker.go
internal/config/: config.go
internal/db/: db.go
internal/db/migrations/: 000001_create_enums_and_users.down.sql  000001_create_enums_and_users.up.sql  000002_create_workspaces.down.sql  000002_create_workspaces.up.sql  (+11 more)
internal/errors/: errors.go
internal/k8s/: controller.go
internal/kafka/: consumer.go  dispatcher.go  producer.go
internal/metrics/: metrics.go
internal/middleware/: auth.go
internal/ratelimit/: ratelimit.go
internal/service/: dataset_service.go  job_service.go  user_service.go  workspace_service.go
internal/storage/: minio.go
internal/telemetry/: telemetry.go
pkg/logger/: logger.go
sdk/python/: example.py  pyproject.toml
sdk/python/jobs/: analysis.py  sample_data.csv
sdk/python/mini_databricks/: __init__.py  client.py  datasets.py  exceptions.py  jobs.py
sdk/python/worker/: task_runner.py
(+22 files in other folders)
